Se quita descripcion

--- a/Notebook/proyecto_modulo_3.ipynb
+++ b/Notebook/proyecto_modulo_3.ipynb
@@ -20,6 +20,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EwjNqGquJVhG"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ArturoG1z/Proyecto-Modulo-3-CyAD/blob/main/Notebook/proyecto_modulo_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -29,15 +38,6 @@
       "source": [
         "# from google.colab import drive\n",
         "# drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Sz1GkordfoyJ"
-      },
-      "source": [
-        "***PENDIENTE:*** Agregar descripción pequeña del problema del dataset y del objetivo\n"
       ]
     },
     {
