Se modela y se valida con un arbol de decision

--- a/Notebooks/02-Modelado-Evaluacion-Interpretacion.ipynb
+++ b/Notebooks/02-Modelado-Evaluacion-Interpretacion.ipynb
@@ -91,6 +91,7 @@
     "import ipywidgets as widgets\n",
     "\n",
     "directorio = '../Data'\n",
+    "# directorio = '/content'\n",
     "\n",
     "# Leer archivos xlsx dentro de la carpeta Data\n",
     "files = os.listdir(directorio)\n",
@@ -816,6 +817,7 @@
     "def Kmeans(df):\n",
     "  # Create a KMeans instance with 3 clusters: model\n",
     "  inercia = []\n",
+    "  # Obtener gráfico de Elbow\n",
     "  for k in range(1, 11):\n",
     "    model = KMeans(n_clusters=k, n_init=10)\n",
     "    # dont show output\n",
@@ -5569,7 +5571,7 @@
     }
    ],
    "source": [
-    "df_knn = main(1)"
+    "df_kmeans = main(1)"
    ]
   },
   {
@@ -10220,7 +10222,7 @@
    "outputs": [],
    "source": [
     "# insertar los clusters en el dataset original\n",
-    "dataset['cluster_kmeans'] = df_knn['cluster']\n",
+    "dataset['cluster_kmeans'] = df_kmeans['cluster']\n",
     "dataset['cluster_hc'] = df_hc['cluster']\n",
     "\n",
     "# el cluster de kmeans dio clusters del 0 al 2, mientras que el de clustering jerárquico dio clusters del 1 al 3\n",
@@ -10259,11 +10261,12 @@
     "  nombre_archivo = input(\"Ingrese el nombre del archivo de salida sin extensión y sin espacios: \")\n",
     "\n",
     "directorio_salida = '../Results'\n",
+    "# directorio_salida = '/content'\n",
+    "\n",
     "if not os.path.exists(directorio_salida):\n",
     "  os.makedirs(directorio_salida)\n",
     "\n",
-    "\n",
-    "dataset.to_excel(f'../Results/{nombre_archivo}.xlsx', index=False)"
+    "dataset.to_excel(f'{directorio_salida}/{nombre_archivo}.xlsx', index=False)"
    ]
   }
  ],
