--- a/Notebooks/04-Validacion-Decission-Tree-Clasifier.ipynb
+++ b/Notebooks/04-Validacion-Decission-Tree-Clasifier.ipynb
@@ -55,6 +55,7 @@
     "import ipywidgets as widgets\n",
     "\n",
     "directorio = '../Results'\n",
+    "# directorio = '/content'\n",
     "\n",
     "# Leer archivos xlsx dentro de la carpeta Data\n",
     "files = os.listdir(directorio)\n",
