--- a/Notebooks/same_DF.ipynb
+++ b/Notebooks/same_DF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,8 +18,8 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "path1 = '../Results/d.xlsx'\n",
-    "path2 = '../Results/04_clusters.xlsx'\n",
+    "path1 = '../Results/a-n.xlsx'\n",
+    "path2 = '../Results/02-clusters-previo-imputacion.xlsx'\n",
     "\n",
     "df1 = pd.read_excel(path1)\n",
     "df2 = pd.read_excel(path2)\n",
