Se agrega lectura recursiva de archivos y salida a directorio personalizado en modelado

--- a/Notebooks/04-Validacion-Decission-Tree-Clasifier.ipynb
+++ b/Notebooks/04-Validacion-Decission-Tree-Clasifier.ipynb
@@ -36,294 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5463ebf89cb943bda551830c44e98f93",
+       "model_id": "5c520064b67a47eeac94365a3b244ce8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Archivo:', options=(('Seleccionar archivo', None), ('02_clusters_dataset_previo_imputaci…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archivo seleccionado: 04_clusters.xlsx\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>carrera</th>\n",
-       "      <th>Espacio_Académico</th>\n",
-       "      <th>alumnos</th>\n",
-       "      <th>1p_total_actividades_asignadas</th>\n",
-       "      <th>1p_total_actividades_evaluativas</th>\n",
-       "      <th>1p_porcentaje_evidencias_calificadas</th>\n",
-       "      <th>1p_total_actividades_calificadas</th>\n",
-       "      <th>1p_total_actividades_entregadas</th>\n",
-       "      <th>1p_porcentaje_evidencias_calificadas_tiempo</th>\n",
-       "      <th>1p_total_actividades_calificadas_tiempo</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2p_porcentaje_evidencias_calificadas</th>\n",
-       "      <th>2p_total_actividades_calificadas</th>\n",
-       "      <th>2p_total_actividades_entregadas</th>\n",
-       "      <th>2p_porcentaje_evidencias_calificadas_tiempo</th>\n",
-       "      <th>2p_total_actividades_calificadas_tiempo</th>\n",
-       "      <th>2p_porcentaje_aprobados</th>\n",
-       "      <th>total_actividades_calificadas</th>\n",
-       "      <th>trabajos_por_calificar</th>\n",
-       "      <th>correos_enviados</th>\n",
-       "      <th>correos_recibidos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ingeniería en Computación</td>\n",
-       "      <td>Valle de Chalco</td>\n",
-       "      <td>25</td>\n",
-       "      <td>18</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>438</td>\n",
-       "      <td>438.0</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>437.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>452.0</td>\n",
-       "      <td>452.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>452.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>890.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>2.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ingeniería en Computación</td>\n",
-       "      <td>Valle de Chalco</td>\n",
-       "      <td>23</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>402</td>\n",
-       "      <td>402.0</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>402.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>380.0</td>\n",
-       "      <td>380.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>380.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>782.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>43.00</td>\n",
-       "      <td>17.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ingeniería en Computación (2019)</td>\n",
-       "      <td>CU Texcoco</td>\n",
-       "      <td>43</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>131</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.50</td>\n",
-       "      <td>2.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ingeniería en Computación (2019)</td>\n",
-       "      <td>CU Texcoco</td>\n",
-       "      <td>16</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>89</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>81</td>\n",
-       "      <td>228.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>21.00</td>\n",
-       "      <td>18.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ingeniería en Computación (2019)</td>\n",
-       "      <td>CU Texcoco</td>\n",
-       "      <td>20</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>239.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20.75</td>\n",
-       "      <td>13.25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             carrera Espacio_Académico  alumnos  \\\n",
-       "0          Ingeniería en Computación   Valle de Chalco       25   \n",
-       "1          Ingeniería en Computación   Valle de Chalco       23   \n",
-       "2  Ingeniería en Computación (2019)         CU Texcoco       43   \n",
-       "3  Ingeniería en Computación (2019)         CU Texcoco       16   \n",
-       "4  Ingeniería en Computación (2019)         CU Texcoco       20   \n",
-       "\n",
-       "   1p_total_actividades_asignadas  1p_total_actividades_evaluativas  \\\n",
-       "0                              18                                18   \n",
-       "1                              19                                19   \n",
-       "2                               5                                 5   \n",
-       "3                               6                                 6   \n",
-       "4                               6                                 6   \n",
-       "\n",
-       "   1p_porcentaje_evidencias_calificadas  1p_total_actividades_calificadas  \\\n",
-       "0                                   1.0                               438   \n",
-       "1                                   1.0                               402   \n",
-       "2                                   1.0                               131   \n",
-       "3                                   1.0                                89   \n",
-       "4                                   1.0                               102   \n",
-       "\n",
-       "   1p_total_actividades_entregadas  \\\n",
-       "0                            438.0   \n",
-       "1                            402.0   \n",
-       "2                            131.0   \n",
-       "3                             89.0   \n",
-       "4                            102.0   \n",
-       "\n",
-       "   1p_porcentaje_evidencias_calificadas_tiempo  \\\n",
-       "0                                        0.998   \n",
-       "1                                        1.000   \n",
-       "2                                        1.000   \n",
-       "3                                        1.000   \n",
-       "4                                        1.000   \n",
-       "\n",
-       "   1p_total_actividades_calificadas_tiempo  ...  \\\n",
-       "0                                    437.0  ...   \n",
-       "1                                    402.0  ...   \n",
-       "2                                    131.0  ...   \n",
-       "3                                     89.0  ...   \n",
-       "4                                    102.0  ...   \n",
-       "\n",
-       "   2p_porcentaje_evidencias_calificadas  2p_total_actividades_calificadas  \\\n",
-       "0                                   1.0                             452.0   \n",
-       "1                                   1.0                             380.0   \n",
-       "2                                   0.0                               0.0   \n",
-       "3                                   1.0                             139.0   \n",
-       "4                                   1.0                             137.0   \n",
-       "\n",
-       "   2p_total_actividades_entregadas  \\\n",
-       "0                            452.0   \n",
-       "1                            380.0   \n",
-       "2                              0.0   \n",
-       "3                            139.0   \n",
-       "4                            137.0   \n",
-       "\n",
-       "   2p_porcentaje_evidencias_calificadas_tiempo  \\\n",
-       "0                                          1.0   \n",
-       "1                                          1.0   \n",
-       "2                                          0.0   \n",
-       "3                                          1.0   \n",
-       "4                                          1.0   \n",
-       "\n",
-       "   2p_total_actividades_calificadas_tiempo  2p_porcentaje_aprobados  \\\n",
-       "0                                    452.0                        0   \n",
-       "1                                    380.0                        0   \n",
-       "2                                      0.0                        0   \n",
-       "3                                    139.0                       81   \n",
-       "4                                    137.0                       50   \n",
-       "\n",
-       "   total_actividades_calificadas  trabajos_por_calificar  correos_enviados  \\\n",
-       "0                          890.0                     0.0              5.75   \n",
-       "1                          782.0                     0.0             43.00   \n",
-       "2                          131.0                     0.0              7.50   \n",
-       "3                          228.0                     0.0             21.00   \n",
-       "4                          239.0                     0.0             20.75   \n",
-       "\n",
-       "   correos_recibidos  \n",
-       "0               2.25  \n",
-       "1              17.00  \n",
-       "2               2.50  \n",
-       "3              18.00  \n",
-       "4              13.25  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    3\n",
-       "1    3\n",
-       "2    1\n",
-       "3    2\n",
-       "4    2\n",
-       "Name: cluster_kmeans, dtype: int64"
+       "Dropdown(description='Archivo:', options=(('Seleccionar archivo', None), ('../Results/02_clusters_dataset_prev…"
       ]
      },
      "metadata": {},
@@ -341,9 +59,13 @@
     "directorio = '../Results'\n",
     "# directorio = '/content'\n",
     "\n",
-    "# Leer archivos xlsx dentro de la carpeta Data\n",
-    "files = os.listdir(directorio)\n",
-    "files = [f for f in files if f.endswith('.xlsx')]\n",
+    "# Leer archivos xlsx dentro de la carpeta Results de manera recursiva\n",
+    "files = []\n",
+    "for r, d, f in os.walk(directorio):\n",
+    "  for file in f:\n",
+    "    if '.xlsx' in file:\n",
+    "      files.append(os.path.join(r, file))\n",
+    "\n",
     "\n",
     "# Seleccionar archivo a leer\n",
     "dropdown = widgets.Dropdown(\n",
