--- a/Notebooks/same_DF.ipynb
+++ b/Notebooks/same_DF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,15 +18,21 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "path1 = '../Results/a-n.xlsx'\n",
-    "path2 = '../Results/02-clusters-previo-imputacion.xlsx'\n",
+    "path1 = '../Results/01-clusters/clusters-sin-categoricos.xlsx'\n",
+    "path2 = '../Results2/01-clusters-original-sin-categoricos.xlsx'\n",
     "\n",
     "df1 = pd.read_excel(path1)\n",
     "df2 = pd.read_excel(path2)\n",
     "\n",
-    "print(df1.equals(df2))\n",
-    "\n"
+    "print(df1.equals(df2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -45,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
