--- a/Notebooks/03-Analisis-Clusters-Interpretacion.ipynb
+++ b/Notebooks/03-Analisis-Clusters-Interpretacion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,23 +15,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50a23b63e3c84b74a988e538b7dec875",
+       "model_id": "dcb6a2d5e2ba44a89e42437fb87c5971",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Archivo:', options=(('Seleccionar archivo', None), ('01-clusters-original-con-categorico…"
+       "Dropdown(description='Archivo:', options=(('Seleccionar archivo', None), ('../Results/02_clusters_dataset_prev…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archivo seleccionado: 04_clusters.xlsx\n"
-     ]
     }
    ],
    "source": [
@@ -44,9 +37,14 @@
     "# para colab\n",
     "# directorio = '/content' # si es un directorio en el que se subieron los archivos a colab o en drive agregar ruta\n",
     "\n",
-    "# Leer archivos xlsx dentro de la carpeta Data\n",
-    "files = os.listdir(directorio)\n",
-    "files = [f for f in files if f.endswith('.xlsx')]\n",
+    "# Leer archivos xlsx dentro de la carpeta Results de manera recursiva\n",
+    "\n",
+    "files = []\n",
+    "for r, d, f in os.walk(directorio):\n",
+    "  for file in f:\n",
+    "    if '.xlsx' in file:\n",
+    "      files.append(os.path.join(r, file))\n",
+    "\n",
     "\n",
     "# Seleccionar archivo a leer\n",
     "dropdown = widgets.Dropdown(\n",
@@ -1495,7 +1493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
