--- a/Notebooks/same_DF.ipynb
+++ b/Notebooks/same_DF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -18,8 +18,8 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "path1 = '../Results/01-clusters/clusters-sin-categoricos.xlsx'\n",
-    "path2 = '../Results2/01-clusters-original-sin-categoricos.xlsx'\n",
+    "path1 = '../Results/04-clusters-limpio-con-categoricos/clusters.xlsx'\n",
+    "path2 = '../Results/04_clusters.xlsx'\n",
     "\n",
     "df1 = pd.read_excel(path1)\n",
     "df2 = pd.read_excel(path2)\n",
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
